--- a/TS/CM/1/1.md
+++ b/TS/CM/1/1.md
@@ -1,4 +1,4 @@
-# TS 1 - Introduction
+# TS 1 - Signaux et systèmes numériques
 
 **Exam + CC + Quicks**
 
@@ -14,7 +14,7 @@ TP : <patricia.ladret@gipse-lap.grenoble-inp.fr>
 
 ## Signaux numériques (2.1)
 
-PDF : <https://im2ag-moodle.e.ujf-grenoble.fr/pluginfile.php/42985/mod_resource/content/1/Notes_Cours_2019_Chapitre1.pdf>
+**Polycopié (mis à jour)** : <https://im2ag-moodle.e.ujf-grenoble.fr/pluginfile.php/43173/mod_resource/content/2/Notes_Cours_2019_Chapitre1Version30Janv.pdf>
 
 ### Définitions
 
@@ -286,7 +286,7 @@ $$
 Pour les filtres directs (la partie avec les $a_n$ n'existe pas ici) :
 
 $$
-y[k] = \sum\limits_{m=0}^{M} b_m x[b - m] = \sum\limits_{l=0}^{k} x[l] h[k - l]  
+y[k] = \sum\limits_{m=0}^{M} b_m x[b - m] = \sum\limits_{l=0}^{k} x[l] h[k - l]
 $$
 
 > **Remarque.** Un filtre est dit direct ou non récursif ou à réponse impulsionelle finie (**RIF**) car à partir d'un certain rang $k$, sa réponse impultionnelle vaut $0$.
@@ -326,7 +326,7 @@ $$
 Pour passer à la TF temps discret (**TFTD**), on passe d'intégrale à somme et on utilise les $T_e$ ($t = kT_e$) :
 
 $$
-X(f) = \sum\limits_{k=-\infty}^{=\infty} x(kT_e)\exp (-2\pi jkT_e) = \sum\limits_{k=-\infty}^{+\infty} x[k] \exp (-2 \pi {f \over F_e}k)  
+X(f) = \sum\limits_{k=-\infty}^{=\infty} x(kT_e)\exp (-2\pi jkT_e) = \sum\limits_{k=-\infty}^{+\infty} x[k] \exp (-2 \pi {f \over F_e}k)
 $$
 
 > **Rappel.** $T_e = {1 \over F_e}$
@@ -386,4 +386,82 @@ h(\lambda) & = & \\
 \end{array}\right.
 $$
 
-.
+## Rappels
+
+### TFTD
+
+- $x[k] \leftrightarrow X(f) = \sum\limits_{k=-\infty}^{+infty} x[k] exp(-2 \pi j {f \over F_E} k)$
+- $\lambda = {f \over F_E}$
+- $X(\lambda) = \sum\limits_{k=-\infty}^{+infty} x[k] \exp(-2 \pi j \lambda k)$
+- $x[k] = {1 \over F_E} \int_{-{F_E \over 2}}^{+{F_E \over 2}} X(\lambda) \exp(+2 \pi j k {f \over F_E}) d f$
+- $x[k] = {1 \over 1} \int_{-0,5}^{+0,5} X(\lambda) \exp(+2 \pi j k \lambda) d \lambda$
+
+### Convolution
+
+- $x[k] \leftrightarrow X(f)$
+- $x[k] * h[k] \leftrightarrow X(f) \times H(f)$
+- $x[k - k_0] \leftrightarrow X(f) \times \exp(-2 \pi j k_0 \lambda)$
+
+### Filtre / $h[k]$
+
+$$
+y[k] = x[k] * h[k]
+$$
+
+$$
+TFTD\{y[k]\}(\lambda) = TFTD\{x[k]*h[k]\}(\lambda)
+$$
+
+$$
+Y(\lambda) = X(\lambda) - H(\lambda)
+$$
+
+La caractérisation du filtre en fréquence est : $H(\lambda) = {Y(\lambda) \over X(\lambda)}$ avec $H(\lambda)$ la fonction de transfert.
+
+### Filtre / équation aux différences
+
+$$
+y[k] = \sum\limits_{m=0}^{M} b_m \times x[k - m] - \sum\limits_{n=1}^{N} a_n \times y[k - n]
+$$
+
+$$
+Y(\lambda) = \sum\limits_{m=0}^{M} b_m TFTD\{x[k - m]\}(\lambda) - \sum\limits_{n=1}^{N} a_n TFTD\{y[k - n]\}(\lambda)
+$$
+
+$$
+Y(\lambda) = \sum\limits_{m=0}^{M} b_m X(\lambda) \exp(-2 \pi j m \lambda) - \sum\limits_{n=1}^{N} a_n Y(\lambda) \exp(-2 \pi j n \lambda)
+$$
+
+$$
+Y(\lambda) (1 + \sum\limits_{n=1}^{N} a_n \exp(-2 \pi j n \lambda)) = X(\lambda) (\sum\limits_{m=0}^{M} b_m \exp(-2 \pi j m \lambda))
+$$
+
+$$
+{Y(\lambda) \over X(\lambda)} = {\sum\limits_{m=0}^{M} b_m \exp(-2 \pi j m \lambda) \over 1 + \sum\limits_{n=1}^{N} a_n \exp(-2 \pi j n \lambda)} = H(\lambda)
+$$
+
+## Réponse harmonique (2.9)
+
+$$
+\begin{array}{lcl}
+x[k] & = & \cos(2 \pi {f_0 \over F_E} k) + j \sin(2 \pi {f_0 \over F_E} k)\\
+ & = & \exp(2 \pi j {f_0 \over F_E} k)\\
+ & = & \exp(2 \pi j \lambda_0 k)\\
+\end{array}
+$$
+
+> $\lambda_0 = {f_0 \over F_E}$
+
+Pour les **signaux harmoniques** :
+
+$$
+\begin{array}{lcl}
+y[k] & = & h[k] * x[k]\\
+& = & \sum\limits_{l=-\infty}^{+\infty} h[l] \times x[k - l]\\
+& = & \sum\limits_{l=-\infty}^{+\infty} h[l] \times \exp(2 \pi j \lambda_0 (k - l))\\
+& = & \exp(2 \pi j k \lambda_0) \sum\limits_{l=-\infty}^{+\infty} h[l] \times \exp(2 \pi j \lambda_0 l)\\
+& = & x[k] \times H(\lambda_0)\\
+\end{array}
+$$
+
+avec $x[k] = \exp(2 \pi j \lambda_0 k)$.
