CL - Jeudi 13 Février

--- a/CL/2.md
+++ b/CL/2.md
@@ -1,6 +1,6 @@
 # CL 2 - Dictionnaires et étiquetage de surface
 
-**Slide.** http://www-clips.imag.fr/geod/User/laurent.besacier/CoursCL2011/2.3.1.pdf
+**Slide.** <http://www-clips.imag.fr/geod/User/laurent.besacier/CoursCL2011/2.3.1.pdf>
 
 ## Introduction générale
 
@@ -12,6 +12,15 @@ Organisation d'un lexique (liste de mots) :
 - Scores/probabilités
 - Prononciation
 
+## Étiquetage
+
+Graphe : les arrêtes sont les étiquettes, les sommets sont les mots de la phrase, l'étiquetage est un chemin dans ce graphe.
+
+*Exemple.* $N=4$ mots dans la séquence et $k=5$ étiquettes grammaticales possibles.
+
+![Représentation graphique de l'exemple](img/1.jpg)
+
+Nombre de chemins possibles $= 5^4 = k^N$
 
 
 
