--- a/RI/CM/2/2.md
+++ b/RI/CM/2/2.md
@@ -6,7 +6,7 @@
 
 **Notations :**
 
-![Notations](notations.png)
+![Notations](img/notations.png)
 
 ### Modèle booléens (simple)
 
@@ -27,6 +27,36 @@ Le modèle est **limité** car à partir du moment où la requête est acceptée
 ### Modèle vectoriel (classique)
 
 Répond aux 2 défauts du modèle précédent : poids et pertinences binaires.
+
+$$
+RSV(d_j, q) = {\sum_w t^d_w t^q_w \over ||t^d_w||\times||t^q_w||} = {\sum_w t^d_w t^q_w \over \sqrt{\sum_w (t^d_w)^2} \sqrt{\sum_w (t^q_w)^2}}
+$$
+
+**Degré de similarité.** Le résultat de cette formule (qu'on appellera le cosinus) est maximal lorsque le document ($d_j$) et la requête ($q$) contiennent exactement les mêmes termes et dans les mêmes proportions. Et inversement.
+
+*Exemple.*
+
+- $d_1 = (0.5, 0.5)$
+- $d_2 = (0.25, 1)$
+- $q = (1, 0.5)$
+
+$$
+RSV(d_1, q) = {0.5 \times 1 + 0.5 \times 0.5 \over \sqrt{0.5^2 + 0.5^2} \sqrt{1^2 + 0.5^2}} = {0.75 \over 0.71 \times 1.12} = 0.94
+$$
+
+$$
+RSV(d_2, q) = {0.25 \times 1 + 1 \times 0.5 \over \sqrt{0.25^2 + 1^2} \sqrt{0.5^2 + 0.5^2}} = {0.75 \over 1.03 \times 1.12} = 0.65
+$$
+
+![Visualisation graphique de l'exemple](img/RSV-exemple.png)
+
+#### Algorithme de Rocchio
+
+Enrichissement de la requête initiale $q_0$ avec des termes de la requête $q_*$. Avec $\mathcal{D}_p$ les documents marqués **pertinents** et $\mathcal{D}_{np}$ les documents marqués **non pertinents** et $\alpha$, $\beta$, $\gamma$ $\in \mathbb{R}_+$ (par exemple $1$, $0.6$ et $0.4$). Si on est confiant dans le marquage de documents non pertinents on peut même mettre $\gamma = 0$.
+
+$$
+q^{\text{new}} = \alpha q_0 + {\beta \over ||\mathcal{D}_p||} \Big(\sum\limits_{d \in \mathcal{D}_p} d\Big) - {\gamma \over ||\mathcal{D}_{np}||} \Big(\sum\limits_{d' \in \mathcal{D}_{np}} d'\Big)
+$$
 
 ### Modèle probabiliste (un peu mieux)
 
