--- a/RI/TD/1/1.md
+++ b/RI/TD/1/1.md
@@ -114,6 +114,8 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
   - $t_12$ textuelle
   - $t_13$ vectoriel
 
+\newpage
+
   Suivant ce vocabulaire de 13 termes, les vecteurs avec les poids ($ptf \times pdf$) sont :
 
   - $d_1 =$ `(   0    0    0    0    0    0 1.10    0 1.10    0    0 1.10    0)`
@@ -122,37 +124,37 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
 
   Et l'index inversé qui en découle :
 
-_      | $d_1$ | $d_2$ | $d_3$
--------|-------|-------|------
-$t_1$  | 0     | 0     | 1.10
-$t_2$  | 0     | 1.10  | 0
-$t_3$  | 0     | 0     | 0
-$t_4$  | 0     | 1.10  | 0
-$t_5$  | 0     | 0     | 2.20
-$t_6$  | 0     | 1.10  | 0
-$t_7$  | 1.10  | 0     | 0
-$t_8$  | 0     | 1.10  | 0
-$t_9$  | 1.10  | 0     | 0
-$t_10$ | 0     | 0     | 0
-$t_11$ | 0     | 0     | 1.10
-$t_12$ | 1.10  | 0     | 0
-$t_13$ | 0     | 0     | 1.10
+_        | $d_1$ | $d_2$ | $d_3$
+---------|-------|-------|------
+$t_1$    | 0     | 0     | 1.10
+$t_2$    | 0     | 1.10  | 0
+$t_3$    | 0     | 0     | 0
+$t_4$    | 0     | 1.10  | 0
+$t_5$    | 0     | 0     | 2.20
+$t_6$    | 0     | 1.10  | 0
+$t_7$    | 1.10  | 0     | 0
+$t_8$    | 0     | 1.10  | 0
+$t_9$    | 1.10  | 0     | 0
+$t_{10}$ | 0     | 0     | 0
+$t_{11}$ | 0     | 0     | 1.10
+$t_{12}$ | 1.10  | 0     | 0
+$t_{13}$ | 0     | 0     | 1.10
 
   On exclut les termes qui n'indexent aucun document ($t_3$ et $t_10$ car $pdf = 0$) on se retrouve donc avec non plus $13$ mais $11$ termes/dimensions on a le tableau $V$ :
 
-_      | $d_1$ | $d_2$ | $d_3$
--------|-------|-------|------
-$t_1$  | 0     | 0     | 1.10
-$t_2$  | 0     | 1.10  | 0
-$t_4$  | 0     | 1.10  | 0
-$t_5$  | 0     | 0     | 2.20
-$t_6$  | 0     | 1.10  | 0
-$t_7$  | 1.10  | 0     | 0
-$t_8$  | 0     | 1.10  | 0
-$t_9$  | 1.10  | 0     | 0
-$t_11$ | 0     | 0     | 1.10
-$t_12$ | 1.10  | 0     | 0
-$t_13$ | 0     | 0     | 1.10
+_         | $d_1$ | $d_2$ | $d_3$
+----------|-------|-------|------
+$t'_1$    | 0     | 0     | 1.10
+$t'_2$    | 0     | 1.10  | 0
+$t'_3$    | 0     | 1.10  | 0
+$t'_4$    | 0     | 0     | 2.20
+$t'_5$    | 0     | 1.10  | 0
+$t'_6$    | 1.10  | 0     | 0
+$t'_7$    | 0     | 1.10  | 0
+$t'_8$    | 1.10  | 0     | 0
+$t'_9$    | 0     | 0     | 1.10
+$t'_{10}$ | 1.10  | 0     | 0
+$t'_{11}$ | 0     | 0     | 1.10
 
   On peut ainsi calculer la norme de chacun des documents :
 
