--- a/SI/TP/4/4.md
+++ b/SI/TP/4/4.md
@@ -1,41 +1,25 @@
-% SI TP3 bis -- VBO, Maillages et indexation
+% SI 4 -- Shading
 % Claire VELUT et Mica MURPHY
-% Mercredi 5 février 2020
+% Mercredi 12 février 2020
 
-# VBO, maillages et indexation (suite)
+# Shading
 
-## Ajout d'un attribut
+## Shading de Gouraud
 
-On crée `in vec3 in_normals` dans `vertex.glsl` et on utilise `GLuint normalsBufferID` dans `main.cpp`.
+Nous avons créé les composantes dont on avait besoin pour le calcul d'illumination et choisi (en dehors du `main`) la valeur de TODO. Dans le `main`, nous avons fait le calcul des autres composantes et notamment de la couleur résultante.
 
-## Jouer avec le viewport
+TODO
+```text
+```
 
-On donne en paramètre de `glViewport` les valeurs suivantes :
+![Première vue de l'armadillo avec le shading de Gouraud](img/gouraud1.png)
 
-- En bas à gauche : `(0, 0, w/2, h/2)`
-- En bas à droite : `(0+w/2, 0, w/2, h/2)`
-- En haut à droite : `(0+w/2, 0+h/2, w/2, h/2)`
-- En haut à gauche : `(0, 0+h/2, w/2, h/2)`
-
-![4 armadillos avec la couleur qui dépend de la position](img/armadillo.png)
-
-![4 armadillos avec `colorize`](img/armadillo_grey.png)
-
-![4 armadillos avec chacun une couleur différente](img/armadillo_colors.png)
+![Seconde vue de l'armadillo avec le shading de Gouraud](img/gouraud2.png)
 
 \newpage
 
-## Envoi de variables au shader
+## Transformation des normales
 
-## Animation
-
-
-
-
-
-
-
-
-
+Nous avons transformé les normales...
 
 .
