--- a/RI/CM/2/2.md
+++ b/RI/CM/2/2.md
@@ -62,7 +62,57 @@ $$
 
 ## Évaluation
 
+Exemple de jugements applicables par des humains (pas scalable) :
 
+- Jugements binaires : pertinent/non pertinent
+- Jugements multi-valués : Parfait > Excellent > Bon > Correct > Mauvais
+- Paires de préférence : $d_A$ plus pertinent que $d_B$
+
+On se place dans le cas des **jugements binaires** parce que c'est le plus simple et le plus utilisé.
+
+Mesures d'évaluations des résultats utiles (par rapport aux documents pertinents retournés) :
+
+- **rappel**
+  - proportion de documents pertinents pas retournés
+  - capacité à retourner *tous* les documents pertinents
+
+  $$
+  \text{rappel} = {\text{\# docs pertinents retournés} \over \text{\# docs pertinents}}
+  $$
+
+- **précision**
+  - proportion de documents non pertinents retournés
+  - capacité à ne retourner *aucun* document non pertinent
+  - capacité à ne retourner *que* des documents pertinents
+
+  $$
+  \text{precision} = {\text{\# docs pertinents retournés} \over \text{\# docs retournés}}
+  $$
+
+### Courbes précision/rappel
+
+*Exemple.* 5 documents pertinents : 588, 589, 590, 592, 572
+
+Le nombre de documents renvoyés correspond au rang de chaque document (on regarde les résultats petit à petit).
+
+Le nombre de documents *pertinents* renvoyés est incrémenté lorsqu'un nouveau document pertinent est renvoyé.
+
+Rang | N° doc | Pertinent | Rappel              | Précision
+-----|--------|-----------|---------------------|---------------------------
+1    | 588    | 1         | ${1 \over 5} = 0.2$ | ${1 \over 1} = 1$
+2    | 589    | 1         | ${2 \over 5} = 0.4$ | ${2 \over 2} = 1$
+3    | 576    | 0         | ${2 \over 5} = 0.4$ | ${2 \over 3} \simeq 0.66$
+4    | 590    | 1         | ${3 \over 5} = 0.6$ | ${3 \over 4} = 0.75$
+5    | 986    | 0         | ${3 \over 5} = 0.6$ | ${3 \over 5} = 0.6$
+6    | 592    | 1         | ${4 \over 5} = 0.8$ | ${4 \over 6} \simeq 0.66$
+7    | 884    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 7} \simeq 0.57$
+8    | 988    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 8} = 0.5$
+9    | 578    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 9} \simeq 0.44$
+10   | 985    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 10} = 0.4$
+11   | 103    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 11} \simeq 0.36$
+12   | 591    | 0         | ${4 \over 5} = 0.8$ | ${4 \over 12} \simeq 0.33$
+13   | 572    | 1         | ${5 \over 5} = 1$   | ${5 \over 13} \simeq 0.38$
+14   | 990    | 0         | ${5 \over 5} = 1$   | ${5 \over 14} \simeq 0.36$
 
 
 .
