RI - Jeudi 20 Février - Explication normalisation
Signed-off-by: Antoine Saget <antoinesaget19@gmail.com>

--- a/RI/CM/2/2.md
+++ b/RI/CM/2/2.md
@@ -114,5 +114,27 @@ Rang | N° doc | Pertinent | Rappel              | Précision
 13   | 572    | 1         | ${5 \over 5} = 1$   | ${5 \over 13} \simeq 0.38$
 14   | 990    | 0         | ${5 \over 5} = 1$   | ${5 \over 14} \simeq 0.36$
 
+Tableau normalisé qui peut être utilisé pour faire des comparaisons avec d'autres méthodes :
+
+- On prend des valeurs entre $0$ et $1$ avec un pas de $0.1$ pour le rappel
+- Pour obtenir la valeur de précision $p_i$ dans ce tableau :
+  - On regarde toutes les lignes dans le tableau précédent avec un rappel $\geq r_i$
+  - On prend le maximum de toutes les précisions dans le tableau précédent ce qui donne $p_i$
+
+Rappel | Précision
+-------|----------
+$0$    | $1$
+$0.1$  | $1$
+$0.2$  | $1$
+$0.3$  | $1$
+$0.4$  | $1$
+$0.5$  | $0.75$
+$0.6$  | $0.75$
+$0.7$  | $0.66$
+$0.8$  | $0.66$
+$0.9$  | $0.38$
+$1$    | $0.38$
+
+> On pourra chercher par exemple à obtenir un point le plus haut possible en $1$ (optimisation du rappel) ou à avoir une courbe qui décroît le moins au début (optimisation de la précision).
 
 .
