--- a/SI/TP/4/4.md
+++ b/SI/TP/4/4.md
@@ -6,11 +6,7 @@
 
 ## Shading de Gouraud
 
-Nous avons créé les composantes dont on avait besoin pour le calcul d'illumination et choisi (en dehors du `main`) la valeur de TODO. Dans le `main`, nous avons fait le calcul des autres composantes et notamment de la couleur résultante.
-
-TODO
-```text
-```
+Nous avons créé les composantes dont on avait besoin pour le calcul d'illumination et choisi (en dehors du `main`) la valeur des **coefficients** associés à chaque composante ($\rho_{a,d,s}$), les **couleurs** de chaque composante ($L_{a,d,s}$), la **direction de la lumière** ($l$) et la **brillance** ($s$). Dans le `main`, nous avons fait le calcul des autres composantes : la couleur résultante ($L_f$), la réflexion ($r$), la direction de vision ($e$), les données de sortie ($my_color$) et le point de vue de la caméra ($c_4$ et $c$).
 
 ![Première vue de l'armadillo avec le shading de Gouraud](img/gouraud1.png)
 
@@ -20,6 +16,62 @@ TODO
 
 ## Transformation des normales
 
-Nous avons transformé les normales...
+Nous avons transformé les normales avec la formule ci-dessous. On remarque qu'on obtient un espèce de grain au niveau des bordures des tâches spéculaires qui ont l'air par ailleurs trop importantes.
 
-.
+```text
+vert_normal = (transpose(inverse(ModelMatrix)) * vec4(in_normal, 0.0)).xyz;
+```
+
+![Transformation des normales](img/normales.png)
+
+\newpage
+
+## Shading de Phong
+
+Nous avons fait tous les calculs dans le fragment shader plutôt que dans le vertex shader et ainsi obtenu un résultat proche de celui obtenu pour le shading de Gouraud.
+
+![Shading de Phong](img/phong.png)
+
+![Shading de Phong vu de près](img/phong2.png)
+
+\newpage
+
+## Flat shading
+
+Nous avons mis le mot-clef `flat` devant `vert_normal` dans le vertex shader et le fragment shader et ainsi obtenu un espèce de grain autour des tâches spéculaires, ce sont en fait tous les triangles que l'on voit individuellement.
+
+![Flat shading](img/flat.png)
+
+![Flat shading vu de près](img/flat2.png)
+
+\newpage
+
+## Rendu en *wire frame*
+
+Afin de visualiser les triangles du maillage, nous avons ajouté la ligne `glPolygonMode(GL_FRONT_AND_BACK,GL_LINE);` avant le dessin, ce qui donne un rendu où l'on voit bien les triangles (de près seulement quand le maillage est très détaillé).
+
+![Wireframe (vu de près) où l'on voit bien la profondeur](img/wireframe.png)
+
+\newpage
+
+Mais si on ajoute `glEnable(GL_CULL_FACE);` et `glCullFace(GL_FRONT);` avant le `glPolygonMode` précédent, on ne distingue pas bien la profondeur.
+
+![Wireframe (vu de loin) où l'on ne voit pas bien la profondeur](img/profondeur.png)
+
+\newpage
+
+## Création d'un maillage
+
+Dans les préférences de Blender nous avons ajouté l'add-on "Import-Export: OFF format" mentionné dans le sujet (en le téléchargeant depuis le dépôt Git : <https://github.com/alextsui05/blender-off-addon/>), mais l'option d'export n'apparaît pas après cette manipulation, donc nous n'avons pas pu la faire jusqu'au bout.
+
+![Préférences de Blender](img/off.png)
+
+![Formats d'exportation de Blender](img/export.png)
+
+\newpage
+
+## Toon Shading
+
+On a utilisé `frag_color = vec4(mod(Lf.x, 1.0), mod(Lf.y, 1.0),mod(Lf.z, 1.0), 1.0);` pour faire un toon shading mais le résultat n'était pas flagrant (mais assez amusant à voir !).
+
+![Effet toon shading pas tout a fait réussi](img/toon.png)
