TS - CM 2 (2nd part)

--- a/TS/CM/2/2.md
+++ b/TS/CM/2/2.md
@@ -87,7 +87,7 @@ X(z) = \sum\limits_{k=-\infty}^{-1} x[k]z^{-k} + \sum\limits_{k=0}^{+\infty} x[k
 $$
 
 > À gauche (avant $0$) se trouve la **partie anticausale** ($X^-$) et à droite (à partir de $0$) la **partie causale** ($X^+$).
-c
+
 **Rayon de Convergence causal.** $|z| > R^+$ et $R^+ = \lim\limits_{k \to +\infty} |x[k]|^{1/k}$ donc elle se trouve à l'**extérieur** du cercle.
 
 **Critère de Cauchy.** $\sum\limits_{k=0}^{+\infty} u_k$ converge si $\lim\limits_{k \to +\infty} |u[k]|^{1/k} < 1$.
@@ -146,7 +146,7 @@ Donc $A$ et $B$ donnent la même transformée en Z, mais avec des convergences d
   - $Y[k] = \alpha X_1[k] + \beta X_2[k]$
 - Si $x_1, x_2$ causales : $|z| > R_1$ et $|z| > R_2$.
   - RDC de Y(z) : $|z| > Max(R_1, R_2)$
-- Retard
+- Théorème du retard
   - $x[k] \leftrightarrow x(z)$
   - $x[k - k_0] \Leftrightarrow z^{-k_0}x(z)$
   - $x[-k] \Leftrightarrow x(z^{-1})$
@@ -266,10 +266,58 @@ Filtre **causal** stable $\Leftrightarrow$ tous les pôles $p_i$ sont **à l'int
 
 Filtre **anti-causal** stable $\Leftrightarrow$ tous les pôles $p_i$ sont **à l'extérieur** du cercle unité
 
+*Exemple.* Transformée inverse (filtre **causal**)
 
+$$
+H_Z(z) = {z \over z - a} + {z \over z - b} = {1 \over 1 - az^{-1}} + {1 \over 1 - bz^{-1}}
+$$
 
+$$
+H_Z(z) = {Y_Z(z) \over X_Z(z)} = {1 - az^{-1} + 1 - bz^{-1} \over (1 - az^{-1})(1 - bz^{-1})}
+$$
 
+$$
+Y(z) = (1 - (a+b)z^{-1} + abz^{-2}) = X(z)(2 - (a+b)z^{-1})
+$$
 
+$$
+Y(z) = X(z)(2 - (a+b)z^{-1}) + Y(z)((a+b)z^{-1} - abz^{-2})
+$$
 
+*Transformée inverse :*
+
+$$
+y[k] = x[k] - (a+b)x[k-1] + (a+b)y[k-1] - aby[k-2]
+$$
+
+*Exemple.* Transformée inverse (filtre **anti-causal**)
+
+$$
+H_Z(z) = {z \over z - a} + {z \over z - b} = {z(2z - (a+b)) \over (z-a) (z-b)}
+$$
+
+$$
+zX(z)(2z - (a+b)) = Y(z)(z-a)(z-b)
+$$
+
+$$
+Y(z)(z^2 - (a+b)z + ab) = zX(z)(2z - (a+b))
+$$
+
+*Transformée inverse :*
+
+$$
+y[k+2] - (a+b)y[k+1] + aby[k] = 2x[k+2] - (a+b)x[k+1]
+$$
+
+$$
+y[k] = (ab)^{-1}(2x[k+2] - (a+b)x[k+1] + (a+b)y[k+1] - y[k+2])
+$$
+
+## Cas des fonctions rationnelles
+
+*Voir formule dans le poly*
+
+$C = {u_N \over v_M}$
 
 .
